# GasDyn-sem3

./: CMakeLists.txt  CMakePresets.txt  graph_base.opju  notepad_session  params.nml  params_2410.nml  params_bac.nml  params_example.nml  truba_godunov_high.nml
cmake/: compilers.cmake  options.cmake
src/: CMakeLists.txt  main.f90
src/modules/: CMakeLists.txt  TVD.f90  TVD_b.f90  TVD_flux.f90  godunov.f90  io.f90  modules.f90  vanleer.f90
tests/: CMakeLists.txt  test_godunov.f90
